@@ -34,6 +34,13 @@ Multi-Status response.
 @nresults: 
 
 
+<!-- ##### TYPEDEF E2kResultIter ##### -->
+<para>
+An opaque structure used to iterate through the results of a
+Multi-Status WebDAV method.
+</para>
+
+
 <!-- ##### FUNCTION e2k_result_iter_next ##### -->
 <para>
 
