@@ -1,16 +1,0 @@
-<!-- ##### STRUCT E2kProperties ##### -->
-<para>
-An #E2kProperties structure represents a set of WebDAV properties;
-either properties that are currently on an object, or a set of
-properties the caller wishes to add to / modify on / delete from an
-object.
-</para>
-
-
-<!-- ##### STRUCT E2kResultIter ##### -->
-<para>
-An opaque structure used to iterate through the results of a
-Multi-Status WebDAV method.
-</para>
-
-
